--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -121,6 +121,100 @@ jobs:
           echo "Git configuration complete."
           echo "::endgroup::"
 
+      - name: Run Arch Package Update and Build Task # Fix local in loop, debug changes.json
+        shell: bash
+        run: |
+          #!/bin/bash
+          set -euo pipefail 
+          echo "::notice title=SCRIPT_START::Arch Package Update Task started."
+
+          # --- Helper Functions --- (Assume correct)
+          _log_notice() { echo "::notice title=$1::$2"; }
+          _log_error() { echo "::error title=$1::$2"; }
+          _log_warning() { echo "::warning title=$1::$2"; }
+          _log_debug() { echo "::debug::$1"; } 
+          _start_group() { echo "::group::$1"; }
+          _end_group() { echo "::endgroup::"; }
+          _log_notice "HELPER_DEF" "Helper functions defined."
+
+          # --- Configuration & Constants --- (Assume correct)
+          _log_notice "VARS_CONSTANTS" "Defining constants..."
+          BUILDER_HOME="/home/builder"; NVCHECKER_RUN_DIR="${BUILDER_HOME}/nvchecker-run"; ARTIFACTS_DIR="${GITHUB_WORKSPACE}/artifacts"; PACKAGE_DETAILS_JSON_PATH="${NVCHECKER_RUN_DIR}/package_details.json" 
+          _log_notice "VARS_CONSTANTS" "BUILDER_HOME=${BUILDER_HOME}, NVCHECKER_RUN_DIR=${NVCHECKER_RUN_DIR}, PACKAGE_DETAILS_JSON_PATH=${PACKAGE_DETAILS_JSON_PATH}"
+          
+          # --- Function Definitions --- (Keep setup_environment, generate_nvchecker_config, run_compare_aur_local_versions, run_version_checks as they were from the last working version)
+          setup_environment() {
+              _start_group "Setup Environment"; _log_notice "SETUP_ENV" "Configuring environment in ${NVCHECKER_RUN_DIR}..."
+              if ! sudo -u builder mkdir -p "${NVCHECKER_RUN_DIR}"; then _log_error "SETUP_FAIL" "mkdir NVCHECKER_RUN_DIR failed."; _end_group; return 1; fi
+              if ! mkdir -p "${ARTIFACTS_DIR}"; then _log_error "SETUP_FAIL" "mkdir ARTIFACTS_DIR failed."; _end_group; return 1; fi
+              cd "${NVCHECKER_RUN_DIR}"; _log_debug "Now in $(pwd)."
+              local all_ok=true # This local is fine (inside function)
+              for script_to_copy in "buildscript.py" "compare_aur_local_versions.py"; do 
+                  local script_source_path; script_source_path=$(find "${GITHUB_WORKSPACE}/scripts/" -name "${script_to_copy}" -type f -print -quit 2>/dev/null)
+                  if [ -n "${script_source_path}" ] && [ -f "${script_source_path}" ]; then
+                      if sudo -u builder cp "${script_source_path}" "./${script_to_copy}" && sudo -u builder chmod +x "./${script_to_copy}"; then
+                         _log_debug "Copied & chmodded ${script_to_copy}."
+                      else _log_error "SETUP_FAIL" "cp/chmod failed for ${script_to_copy}."; all_ok=false; fi
+                  else _log_error "SETUP_FAIL" "${script_to_copy} not found in ${GITHUB_WORKSPACE}/scripts/."; all_ok=false; fi
+              done
+              if ! ${all_ok}; then _log_error "SETUP_ENV_FINAL_FAIL" "Script setup failed."; _end_group; return 1; fi
+              _log_notice "SETUP_ENV" "Environment setup SUCCEEDED."; _end_group; return 0 
+          }
+
+          generate_nvchecker_config() {
+              _start_group "Generate NVChecker Configuration"; _log_notice "NV_CONF" "Generating nvchecker config files..."
+              local cfg="new.toml"; local keyf="keyfile.toml"         
+              echo "[__config__]" > "${cfg}"; echo "oldver = 'aur.json'" >> "${cfg}"; echo "newver = 'local.json'" >> "${cfg}" 
+              echo "[keys]" > "${keyf}"; echo "github = '${{ secrets.GHuK }}'" >> "${keyf}"
+              local individual_configs=(); mapfile -t individual_configs < <(find "${GITHUB_WORKSPACE}" -path "*/maintain/build/*/.nvchecker.toml" -type f -print)
+              if [ ${#individual_configs[@]} -gt 0 ]; then
+                  _log_debug "Appending ${#individual_configs[@]} individual .nvchecker.toml files."
+                  for cf in "${individual_configs[@]}"; do cat "${cf}" >> "${cfg}"; echo "" >> "${cfg}"; done
+              else _log_warning "NV_CONF" "No individual .nvchecker.toml files found."; fi
+              if ! chown builder:builder "${cfg}" "${keyf}"; then _log_error "NV_CONF_FAIL" "chown for ${cfg}/${keyf} FAILED. Exit: $?."; _end_group; return 1; fi
+              _log_notice "NV_CONF" "NVChecker configuration generated successfully."; _end_group; return 0
+          }
+
+          run_compare_aur_local_versions() {
+              _start_group "Compare AUR vs Local Versions (Generates aur.json)"; _log_notice "COMPARE_AUR" "Running compare_aur_local_versions.py..."
+              local script="./compare_aur_local_versions.py"; local outfile="aur.json" 
+              if [ ! -f "${script}" ]; then _log_error "COMPARE_AUR_FAIL" "${script} not found in $(pwd)!"; _end_group; return 1; fi
+              _log_debug "Executing: sudo -E -u builder python3 ${script} (args follow)"
+              local stderr_log; stderr_log=$(mktemp)
+              if sudo -E -u builder python3 "${script}" --maintainer "${AUR_MAINTAINER_NAME}" --repo-root "${GITHUB_WORKSPACE}" 2> "${stderr_log}"; then
+                  if [ -s "${outfile}" ]; then 
+                     _log_notice "COMPARE_AUR" "${outfile} generated (Size: $(wc -c < "${outfile}") bytes)."
+                     _log_debug "aur.json Head: $(head -n 5 "${outfile}")"
+                     if ! sudo -u builder chown builder:builder aur.json local.json changes.json combined.json 2>/dev/null; then _log_warning "COMPARE_AUR" "Could not chown one or more output files to builder."; fi
+                  else _log_warning "COMPARE_AUR" "${outfile} was expected but is empty/not found."; if [ -s "${stderr_log}" ]; then _log_warning "COMPARE_AUR_PY_STDERR" "Stderr(exit 0): $(cat "${stderr_log}")"; fi; fi
+              else
+                  _log_error "COMPARE_AUR_FAIL" "Python script FAILED (Exit: $?). Stderr: $(cat "${stderr_log}")"; rm "${stderr_log}"; _end_group; return 1
+              fi
+              rm "${stderr_log}"; _log_notice "COMPARE_AUR" "compare_aur_local_versions.py SUCCEEDED."; _end_group; return 0
+          }
+
+          run_version_checks() {
+              _start_group "Run Version Checks (nvchecker, nvcmp)"; _log_notice "VER_CHECKS" "Running nvchecker & nvcmp..."
+              if [ ! -f "new.toml" ]||[ ! -f "keyfile.toml" ]||[ ! -f "aur.json" ]; then _log_error "VER_CHECKS_FAIL" "Missing input files."; _end_group; return 1; fi
+              
+              _log_notice "VER_CHECKS_NVCHECKER" "Running nvchecker..."
+              if sudo -E -u builder nvchecker -c new.toml -k keyfile.toml --logger json > local.json; then
+                 _log_notice "VER_CHECKS" "nvchecker OK. local.json size: $(wc -c < local.json) bytes."
+                 _log_debug "local.json Head: $(head -n 5 local.json)"
+                 _log_debug "Full local.json content:"
+                 cat local.json | while IFS= read -r line; do _log_debug "  $line"; done
+              else _log_error "VER_CHECKS_FAIL" "nvchecker FAILED (Exit: $?)."; _end_group; return 1; fi
+              
+              _log_notice "VER_CHECKS_NVCMP" "Running nvcmp..."
+              if sudo -E -u builder nvcmp -c new.toml > changes.json; then # This overwrites changes.json from python script
+                 _log_notice "VER_CHECKS" "nvcmp OK. changes.json size: $(wc -c < changes.json) bytes."
+                 _log_debug "changes.json Head: $(head -n 5 changes.json)"
+                 _log_debug "Full changes.json content (from nvcmp):"
+                 cat changes.json | while IFS= read -r line; do _log_debug "  $line"; done
+              else _log_error "VER_CHECKS_FAIL" "nvcmp FAILED (Exit: $?)."; _end_group; return 1; fi
+              _log_notice "VER_CHECKS" "Version checks SUCCEEDED."; _end_group; return 0
+          }
+          
           get_package_updates_list() {
               _start_group "Get Package Updates List"; 
               _log_notice "GET_UPDATES" "Determining packages to update using nvcmp -q only..."
@@ -135,7 +229,7 @@ jobs:
                   _log_error "GET_UPDATES_FAIL" "new.toml not found for nvcmp -q!"; _end_group; return 1; 
               fi
 
-              local updates_from_nvcmp_q=() # 'local' is fine here
+              updates_from_nvcmp_q=() # 'local' is fine here
               
               mapfile -t updates_from_nvcmp_q < <(sudo -E -u builder nvcmp -c new.toml -q 2>/dev/null || true)
               _log_debug "Found ${#updates_from_nvcmp_q[@]} updates from nvcmp -q."
@@ -162,3 +256,126 @@ jobs:
               _log_notice "GET_UPDATES" "Package update list generation SUCCEEDED."
               _end_group; return 0
           }
+
+          extract_path_components() { 
+              _log_debug "extract_path_components input: $1"
+              local path_to_parse="$1"; local relative_path="${path_to_parse#${GITHUB_WORKSPACE}/}"
+              relative_path="${relative_path%/}";  relative_path="${relative_path#/}" 
+              IFS='/' read -r -a components_array <<< "${relative_path}"
+              _log_debug "extract_path_components output: ${components_array[*]}"
+              echo "${components_array[@]}" 
+          }
+
+          extract_pkgbuild_details() { 
+              _log_debug "extract_pkgbuild_details input (absolute PKGBUILD dir): $1"
+              local pkgbuild_dir_abs="$1" 
+              if [ ! -f "${pkgbuild_dir_abs}/PKGBUILD" ]; then _log_error "EXTRACT_FAIL" "PKGBUILD missing in ${pkgbuild_dir_abs}"; return 1; fi
+              ( source "${pkgbuild_dir_abs}/PKGBUILD"; declare -p depends makedepends checkdepends source 2>/dev/null || true ) || 
+              { _log_error "EXTRACT_FAIL" "Sourcing/declaring PKGBUILD vars failed for ${pkgbuild_dir_abs}"; return 1; }
+          }
+
+          process_single_package_details() { 
+              _log_debug "process_single_package_details: pkg='$1', rel_dir='$2'"
+              local package_name="$1"; local pkgbuild_dir_rel_to_workspace="$2"; local declarations
+              
+              if ! declarations=$(extract_pkgbuild_details "${GITHUB_WORKSPACE}/${pkgbuild_dir_rel_to_workspace}"); then
+                  _log_error "PROCESS_FAIL" "extract_pkgbuild_details failed for ${package_name}."
+                  jq -n --arg pkg_name_arg "$package_name" '{($pkg_name_arg): {"error": "failed to extract PKGBUILD details"}}'
+                  return 1 
+              fi
+              _log_debug "Bash declarations for ${package_name}: ${declarations}"
+              
+              unset depends makedepends checkdepends source; eval "$declarations"
+              
+              local dep_j mak_j chk_j src_j 
+              dep_j=$(printf '%s\n' "${depends[@]:-}" | jq -R -s -c 'split("\n")[:-1]')
+              mak_j=$(printf '%s\n' "${makedepends[@]:-}" | jq -R -s -c 'split("\n")[:-1]')
+              chk_j=$(printf '%s\n' "${checkdepends[@]:-}" | jq -R -s -c 'split("\n")[:-1]')
+              src_j=$(printf '%s\n' "${source[@]:-}" | jq -R -s -c 'split("\n")[:-1]')
+              
+              jq -n --arg pkg "$package_name" --argjson d "$dep_j" --argjson m "$mak_j" --argjson c "$chk_j" --argjson s "$src_j" \
+                  '{($pkg): {depends: $d, makedepends: $m, checkdepends: $c, sources: $s}}'
+          }
+
+          # --- Main Execution Flow ---
+          _log_notice "MAIN_EXEC" "Starting main execution flow..."
+          
+          if ! setup_environment; then _log_error "MAIN_FAIL" "setup_environment FAILED."; exit 1; fi
+          if ! generate_nvchecker_config; then _log_error "MAIN_FAIL" "generate_nvchecker_config FAILED."; exit 1; fi
+          if ! run_compare_aur_local_versions; then _log_error "MAIN_FAIL" "run_compare_aur_local_versions FAILED."; exit 1; fi
+          if ! run_version_checks; then _log_error "MAIN_FAIL" "run_version_checks FAILED."; exit 1; fi
+          if ! get_package_updates_list; then _log_error "MAIN_FAIL" "get_package_updates_list FAILED."; exit 1; fi
+
+          _log_notice "MAIN_EXEC" "Pre-build phases completed. UPDATES count: ${#UPDATES[@]}"
+          if [ ${#UPDATES[@]} -eq 0 ]; then
+              _log_notice "MAIN_EXEC_NO_UPDATES" "No updates to process. Exiting."
+              exit 0
+          fi
+
+          _start_group "Process PKGBUILD Details for Updated Packages"
+          _log_notice "JSON_GEN" "Processing PKGBUILD details for ${#UPDATES[@]} updated package(s)..."
+          
+          combined_pkg_details_json="{}" 
+
+          for package_to_process in "${UPDATES[@]}"; do
+              _start_group "Processing Details: [${package_to_process}]" 
+              _log_notice "JSON_GEN_PKG" "Starting detail extraction for: [${package_to_process}]"
+
+              if [ -z "${package_to_process}" ]; then 
+                  _log_warning "JSON_GEN_PKG_EMPTY_NAME" "package_to_process is empty. Skipping."
+                  _end_group; continue
+              fi
+              
+              # CORRECTED: Removed 'local' from these declarations inside the loop
+              pkg_build_dirs_found=() 
+              mapfile -t pkg_build_dirs_found < <(find "${GITHUB_WORKSPACE}" -path "*/maintain/build/${package_to_process}" -type d -exec test -f "{}/PKGBUILD" \; -print)
+
+              if [ ${#pkg_build_dirs_found[@]} -eq 0 ]; then
+                  _log_warning "JSON_GEN_PKG_SKIP" "No PKGBUILD dir for '${package_to_process}'. Skipping."
+                  _end_group; continue 
+              elif [ ${#pkg_build_dirs_found[@]} -gt 1 ]; then
+                  _log_warning "JSON_GEN_PKG_SKIP" "Multiple PKGBUILD dirs for '${package_to_process}'. Skipping."
+                  _end_group; continue 
+              fi
+              
+              package_dir_abs="${pkg_build_dirs_found[0]}" # No local
+              package_dir_rel_to_workspace="${package_dir_abs#${GITHUB_WORKSPACE}/}" # No local
+              _log_debug "Found PKGBUILD for ${package_to_process} at: ${package_dir_rel_to_workspace}"
+
+              single_package_json_fragment="" # No local, initialize
+              process_details_succeeded=true # No local
+              if ! single_package_json_fragment=$(process_single_package_details "$package_to_process" "$package_dir_rel_to_workspace"); then
+                  _log_warning "JSON_GEN_PKG_PROCESS_FAIL" "process_single_package_details had issues for ${package_to_process}."
+                  process_details_succeeded=false 
+              fi
+              _log_debug "JSON fragment for ${package_to_process}: ${single_package_json_fragment}"
+
+              temp_merged_json="" # No local, initialize
+              if temp_merged_json=$(echo "$combined_pkg_details_json $single_package_json_fragment" | jq -s 'add'); then
+                 combined_pkg_details_json="$temp_merged_json" 
+                 _log_debug "Merged JSON for ${package_to_process}."
+                 if ! $process_details_succeeded; then _log_warning "JSON_GEN_PKG_MERGED_ERROR" "Merged JSON for ${package_to_process} (contained error field)."; fi
+              else
+                 _log_error "JSON_GEN_PKG_MERGE_FAIL" "jq -s 'add' FAILED for ${package_to_process}."
+              fi
+              _end_group 
+          done
+          _log_notice "JSON_GEN_LOOP_END" "Finished loop over UPDATES array."
+
+          _log_notice "JSON_GEN" "Saving combined package details to ${PACKAGE_DETAILS_JSON_PATH}..."
+          echo "${combined_pkg_details_json}" | jq . > "${PACKAGE_DETAILS_JSON_PATH}"
+          if chown builder:builder "${PACKAGE_DETAILS_JSON_PATH}"; then
+             _log_debug "chown for ${PACKAGE_DETAILS_JSON_PATH} to builder SUCCEEDED."
+          else _log_warning "JSON_GEN_CHOWN_FAIL" "Failed to chown ${PACKAGE_DETAILS_JSON_PATH} to builder."; fi
+          
+          _log_notice "JSON_GEN_SUMMARY" "Contents of ${PACKAGE_DETAILS_JSON_PATH} (first 20 lines):"
+          head -n 20 "${PACKAGE_DETAILS_JSON_PATH}" | while IFS= read -r line; do _log_notice "JSON_LINE" "  $line"; done
+          _log_debug "Full content of ${PACKAGE_DETAILS_JSON_PATH} (enable debug view):"; cat "${PACKAGE_DETAILS_JSON_PATH}" | while IFS= read -r line; do _log_debug "  $line"; done
+          _end_group 
+
+          _log_notice "SCRIPT_PHASED_END" "Current test phase (up to JSON generation) finished."
+          
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AUR_MAINTAINER_NAME: ${{ env.AUR_MAINTAINER_NAME }} 
+
